Avancement crud user

--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -550,7 +550,7 @@ section#loan-register div#container-list-book-crud ul.list-book-crud li.item-boo
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 95%;
   min-height: 120px;
 }
 section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li {
@@ -577,13 +577,11 @@ section#loan-register div#container-list-book-crud ul.list-book-crud li.item-boo
 }
 section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.btn-option-crud {
   position: absolute;
-  right: 0px;
-  top: -10px;
+  right: -15px;
+  top: 39px;
   font-size: 30px;
   padding: 2px 8px;
-  background-color: #ff5e38;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 30px;
   height: -moz-fit-content;
   height: fit-content;
   border-radius: 8px;
@@ -707,10 +705,10 @@ section#loan-register div#container-list-book-crud ul.list-book-crud li.item-boo
     font-size: 18px;
   }
 }
-section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right {
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-right {
   width: 40%;
 }
-section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li {
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-right ul.all-info-book li {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -720,7 +718,7 @@ section#loan-register div#container-list-book-crud ul.list-book-crud li.item-boo
   border-radius: 8px;
 }
 @media screen and (min-width: 950px) {
-  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li {
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-right ul.all-info-book li {
     width: 100%;
     height: -moz-fit-content;
     height: fit-content;
@@ -728,19 +726,19 @@ section#loan-register div#container-list-book-crud ul.list-book-crud li.item-boo
     flex-direction: row;
     justify-content: space-between;
   }
-  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li:nth-child(odd) {
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-right ul.all-info-book li:nth-child(odd) {
     background-color: #fafafa; /* couleur pour les éléments impairs */
   }
-  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li:nth-child(even) {
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-right ul.all-info-book li:nth-child(even) {
     background-color: #f0f7ff; /* couleur pour les éléments impairs */
   }
 }
-section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li span.bdd-var {
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-right ul.all-info-book li span.bdd-var {
   font-size: 16px;
   color: #0868ae;
 }
 @media screen and (min-width: 950px) {
-  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li span.bdd-var {
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-right ul.all-info-book li span.bdd-var {
     font-size: 18px;
   }
 }
@@ -1049,7 +1047,7 @@ div#confirmed-error:hover {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 95%;
   min-height: 120px;
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li {
@@ -1076,11 +1074,10 @@ div#confirmed-error:hover {
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.btn-option-crud {
   position: absolute;
-  right: 0px;
-  top: -10px;
+  right: -60px;
+  top: 35px;
   font-size: 30px;
   padding: 2px 8px;
-  background-color: #ff5e38;
   width: -moz-fit-content;
   width: fit-content;
   height: -moz-fit-content;
@@ -1097,7 +1094,7 @@ div#confirmed-error:hover {
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud {
   position: absolute;
-  right: 120px;
+  right: 50px;
   top: 0;
   width: 220px;
   height: -moz-fit-content;
@@ -1546,4 +1543,37 @@ section#dashboard-page-book-edit #not-modified p.info-msg-bdd {
   color: #475467;
   font-size: 14px;
   line-height: 20px;
+}
+
+section#crud-user div#box-crud-user div.item-complete-center {
+  width: 100%;
+}
+section#crud-user div#box-crud-user div.item-complete-center ul.all-info-history-loan {
+  display: flex;
+  flex-direction: column;
+}
+section#crud-user div#box-crud-user div.item-complete-center ul.all-info-history-loan li.loan-history-row {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 16px;
+  color: gray;
+  padding: 6px 20px;
+  border-radius: 8px;
+}
+@media screen and (min-width: 950px) {
+  section#crud-user div#box-crud-user div.item-complete-center ul.all-info-history-loan li.loan-history-row {
+    width: 100%;
+    height: -moz-fit-content;
+    height: fit-content;
+    font-size: 18px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+section#crud-user div#box-crud-user div.item-complete-center ul.all-info-history-loan li.loan-history-row ul.item-loan-history-row {
+  width: 95%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }/*# sourceMappingURL=style-admin.css.map */
