--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -6,7 +6,7 @@ $white: #fff;
 $black: #070606;
 $footer: #043a61;
 $bgc-dashboard: #f0f7ff;
-$bgModal : rgba(6,13,30,.7);
+$bgModal: rgba(6, 13, 30, 0.7);
 
 *,
 ::after,
@@ -622,7 +622,6 @@ section#dashboard-page-profil {
 // ----------  SECTION lOAN BOOK REGISTER ----------
 
 section#loan-register {
-
   div#container-list-book-crud {
     ul.list-book-crud {
       li.item-book-crud {
@@ -640,7 +639,7 @@ section#loan-register {
           flex-wrap: wrap;
           justify-content: space-between;
           align-items: center;
-          width: 100%;
+          width: 95%;
           min-height: 120px;
           li {
             width: 150px;
@@ -669,12 +668,11 @@ section#loan-register {
 
           li.btn-option-crud {
             position: absolute;
-            right: 0px;
-            top: -10px;
+            right: -15px;
+            top: 39px;
             font-size: 30px;
             padding: 2px 8px;
-            background-color: $btn-red;
-            width: fit-content;
+            width: 30px;
             height: fit-content;
             border-radius: 8px;
 
@@ -812,7 +810,7 @@ section#loan-register {
                 }
               }
 
-              .item-complete-right {
+              div.item-complete-right {
                 width: 40%;
                 ul.all-info-book {
                   li {
@@ -856,7 +854,7 @@ section#loan-register {
     }
   }
 
-// BOX LOAN REGITER
+  // BOX LOAN REGITER
 
   form#form-loan-register {
     .label-form-add-book {
@@ -1212,7 +1210,7 @@ div#confirmed-error {
           flex-wrap: wrap;
           justify-content: space-between;
           align-items: center;
-          width: 100%;
+          width: 95%;
           min-height: 120px;
           li {
             width: 150px;
@@ -1241,11 +1239,10 @@ div#confirmed-error {
 
           li.btn-option-crud {
             position: absolute;
-            right: 0px;
-            top: -10px;
+            right: -60px;
+            top: 35px;
             font-size: 30px;
             padding: 2px 8px;
-            background-color: $btn-red;
             width: fit-content;
             height: fit-content;
             border-radius: 8px;
@@ -1262,7 +1259,7 @@ div#confirmed-error {
 
             div.box-option-crud {
               position: absolute;
-              right: 120px;
+              right: 50px;
               top: 0;
               width: 220px;
               height: fit-content;
@@ -1792,13 +1789,42 @@ section#dashboard-page-book-edit {
   }
 }
 
-
-
 // ----------  SECTION lOAN BOOK REGISTER ----------
 
-// section#crud-user {
+section#crud-user {
+  div#box-crud-user {
 
-//   div#box-crud-user {
+    div.item-complete-center {
+      width: 100%;
 
-//   }
-// }
+      ul.all-info-history-loan {
+        display: flex;
+        flex-direction: column;
+  
+        li.loan-history-row {
+          width: 100%;
+          display: flex;
+          flex-wrap: wrap;
+          font-size: 16px;
+          color: gray;
+          padding: 6px 20px;
+          border-radius: 8px;
+          @media screen and (min-width: 950px) {
+            width: 100%;
+            height: fit-content;
+            font-size: 18px;
+            flex-direction: row;
+            justify-content: space-between;
+          }
+
+          ul.item-loan-history-row {
+            width: 95%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+          }
+        }
+      }
+    }
+  }
+}
