--- a/css/style-book-detail.scss
+++ b/css/style-book-detail.scss
@@ -5,7 +5,7 @@ $white: #fff;
 $black: #070606;
 $footer: #043a61;
 $background: #fafafb;
-$bgModal : rgba(6,13,30,.7);
+$bgModal : rgba(6,13,30,0.5);
 
 body {
   div.bloc-modale {
