--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body div.bloc-modale {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(6, 13, 30, 0.7);
+  background: rgba(6, 13, 30, 0.5);
   z-index: 99;
 }
 
@@ -306,7 +306,7 @@ p.sub-title-section {
 #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout {
   position: absolute;
   top: 42px;
-  right: 50px;
+  right: 74px;
   width: 220px;
   height: 160px;
   background-color: #fff;
@@ -314,8 +314,21 @@ p.sub-title-section {
   padding: 10px 20px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+#main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout::after {
+  position: absolute;
+  display: block;
+  content: "";
+  top: -10px;
+  left: 50%;
+  margin-left: -8px;
+  width: 0;
+  height: 0;
+  border-color: transparent transparent #fff;
+  border-style: solid;
+  border-width: 0 1pc 1pc;
+}
 #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout ul li {
-  margin-top: 3px;
+  margin-top: 10px;
 }
 #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout ul li:first-of-type {
   font-size: 18px;
@@ -335,11 +348,14 @@ p.sub-title-section {
   color: #fff;
   float: right;
 }
+#main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout ul li:last-of-type a:hover {
+  color: #ff5e38;
+}
 #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout ul li a {
   font-size: 16px;
 }
 #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout ul li a:hover {
-  text-decoration: underline;
+  color: #043a61;
 }
 
 #section-news {
@@ -421,21 +437,21 @@ p.sub-title-section {
   right: -25%;
 }
 #section-news #container-section-news #item-section-news-left .wrapper .link_wrapper div.icon {
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   border: 3px solid transparent;
   position: absolute;
   transform: rotate(45deg);
   right: 0;
-  top: 0;
+  top: 10px;
   z-index: -1;
   transition: all 0.35s;
 }
 #section-news #container-section-news #item-section-news-left .wrapper .link_wrapper div.icon svg {
-  width: 30px;
+  width: 25px;
   position: absolute;
-  top: calc(50% - 15px);
-  left: calc(50% - 15px);
+  top: calc(50% - 12px);
+  left: calc(50% - 12px);
   transform: rotate(-45deg);
   fill: #fff;
   transition: all 0.35s;
@@ -748,15 +764,6 @@ p.sub-title-section {
   top: 10px;
   right: 10px;
 }
-#section-soon-available #container-cards span.tag-new-index {
-  position: absolute;
-  top: -10px;
-  right: 0;
-  padding: 5px 15px;
-  border-radius: 8px 0 8px 0;
-  background-color: #ff5e38;
-  color: #fff;
-}
 #section-soon-available #container-cards img.pict-card-book {
   position: absolute;
   top: -40px;
@@ -899,8 +906,8 @@ p.sub-title-section {
   background-image: url(../img/photosblog/cards/pexels-brett-sayles-992734.jpg);
 }
 #section-blog #container-section-blog .card-blog .card-blog-top {
-  height: 55%;
-  max-height: 55%;
+  height: 50%;
+  max-height: 50%;
   overflow: hidden;
   position: relative;
   transition: all 0.5s ease;
@@ -917,25 +924,19 @@ p.sub-title-section {
 }
 #section-blog #container-section-blog .card-blog .card-blog-top .article-infos {
   position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 50px;
-  padding: 16px;
+  top: 0px;
+  right: 0;
+  padding: 8px 16px;
   background: #ff5e38;
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   color: #fff;
   font-weight: bold;
   font-size: 14px;
-}
-#section-blog #container-section-blog .card-blog .card-blog-top .article-infos div {
-  float: left;
-}
-#section-blog #container-section-blog .card-blog .card-blog-top .article-infos .category {
-  float: right;
+  border-radius: 0 8px 0 20px;
 }
 #section-blog #container-section-blog .card-blog .card-blog-bottom {
   position: relative;
-  height: 45%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -952,12 +953,19 @@ p.sub-title-section {
   line-height: 24px;
   margin: 8px 0 14px;
 }
+#section-blog #container-section-blog .card-blog .card-blog-bottom p.date-article-blog {
+  position: absolute;
+  left: 20px;
+  bottom: 4px;
+}
 #section-blog #container-section-blog .card-blog .card-blog-bottom a {
   position: absolute;
   right: 20px;
   bottom: 20px;
-  font-size: 16px;
   color: #0868ae;
+}
+#section-blog #container-section-blog .card-blog .card-blog-bottom a:hover {
+  color: #043a61;
 }
 
 #section-zoom {
