--- a/css/style.scss
+++ b/css/style.scss
@@ -6,7 +6,7 @@ $white: #fff;
 $black: #070606;
 $footer: #043a61;
 $background: #fafafb;
-$bgModal: rgba(6, 13, 30, 0.7);
+$bgModal: rgba(6, 13, 30, 0.5);
 
 *,
 ::after,
@@ -63,7 +63,7 @@ h2 {
   letter-spacing: 0.04em;
   color: $main-blue;
   font-weight: bold;
-  
+
   @media screen and (min-width: 950px) {
     font-size: 65px;
     line-height: 70px;
@@ -340,7 +340,7 @@ p.sub-title-section {
           div#box-index-logout {
             position: absolute;
             top: 42px;
-            right: 50px;
+            right: 74px;
             width: 220px;
             height: 160px;
             background-color: $white;
@@ -348,9 +348,23 @@ p.sub-title-section {
             padding: 10px 20px;
             box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
+            &::after {
+              position: absolute;
+              display: block;
+              content: "";
+              top: -10px;
+              left: 50%;
+              margin-left: -8px;
+              width: 0;
+              height: 0;
+              border-color: transparent transparent #fff;
+              border-style: solid;
+              border-width: 0 1pc 1pc;
+            }
+
             ul {
               li {
-                margin-top: 3px;
+                margin-top: 10px;
                 &:first-of-type {
                   font-size: 18px;
                   color: $main-blue;
@@ -370,12 +384,16 @@ p.sub-title-section {
                   font-size: 16px;
                   color: $white;
                   float: right;
+
+                  &:hover {
+                    color: $btn-red;
+                  }
                 }
 
                 a {
                   font-size: 16px;
                   &:hover {
-                    text-decoration: underline;
+                    color: $footer;
                   }
                 }
               }
@@ -471,21 +489,21 @@ p.sub-title-section {
           }
 
           div.icon {
-            width: 50px;
-            height: 50px;
+            width: 30px;
+            height: 30px;
             border: 3px solid transparent;
             position: absolute;
             transform: rotate(45deg);
             right: 0;
-            top: 0;
+            top: 10px;
             z-index: -1;
             transition: all 0.35s;
 
             svg {
-              width: 30px;
+              width: 25px;
               position: absolute;
-              top: calc(50% - 15px);
-              left: calc(50% - 15px);
+              top: calc(50% - 12px);
+              left: calc(50% - 12px);
               transform: rotate(-45deg);
               fill: $white;
               transition: all 0.35s;
@@ -867,27 +885,6 @@ p.sub-title-section {
         top: 10px;
         right: 10px;
       }
-
-      // &::before {
-      //   position: absolute;
-      //   content: url(../img/picto/heart-rounded.svg);
-      //   top: 10px;
-      //   right: 10px;
-      // }
-
-      // &:hover::before {
-      //   cursor: pointer;
-      // }
-    }
-
-    span.tag-new-index {
-      position: absolute;
-      top: -10px;
-      right: 0;
-      padding: 5px 15px;
-      border-radius: 8px 0 8px 0;
-      background-color: $btn-red;
-      color: $white;
     }
 
     img.pict-card-book {
@@ -1118,8 +1115,8 @@ p.sub-title-section {
       }
 
       .card-blog-top {
-        height: 55%;
-        max-height: 55%;
+        height: 50%;
+        max-height: 50%;
         overflow: hidden;
         position: relative;
         transition: all 0.5s ease;
@@ -1136,29 +1133,21 @@ p.sub-title-section {
 
         .article-infos {
           position: absolute;
-          bottom: 0;
-          width: 100%;
-          height: 50px;
-          padding: 16px;
+          top: 0px;
+          right: 0;
+          padding: 8px 16px;
           background: $btn-red;
           border-top: 1px solid rgba(255, 255, 255, 0.5);
           color: $white;
           font-weight: bold;
           font-size: 14px;
-
-          div {
-            float: left;
-          }
-
-          .category {
-            float: right;
-          }
+          border-radius: 0 8px 0 20px;
         }
       }
 
       .card-blog-bottom {
         position: relative;
-        height: 45%;
+        height: 50%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -1177,12 +1166,21 @@ p.sub-title-section {
           margin: 8px 0 14px;
         }
 
+        p.date-article-blog {
+          position: absolute;
+          left: 20px;
+          bottom: 4px;
+        }
+
         a {
           position: absolute;
           right: 20px;
           bottom: 20px;
-          font-size: 16px;
           color: $main-blue;
+
+          &:hover {
+            color: $footer;
+          }
         }
       }
     }
