--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
 body {
   font-family: "Hind Madurai", sans-serif;
   background-color: #fafafb;
+  overflow-x: hidden;
 }
 body div.bloc-modale {
   position: fixed;
@@ -29,7 +30,12 @@ body div.bloc-modale {
   right: 0;
   bottom: 0;
   background: rgba(6, 13, 30, 0.5);
-  z-index: 99;
+  z-index: 50;
+}
+
+body.no-scroll {
+  margin-right: 17px;
+  overflow: hidden;
 }
 
 ul {
@@ -180,7 +186,7 @@ p.sub-title-section {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 99;
     width: 100%;
   }
 }
@@ -324,6 +330,7 @@ p.sub-title-section {
   left: -200px;
 }
 #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout {
+  z-index: 999;
   position: absolute;
   top: 42px;
   right: 74px;
@@ -783,6 +790,20 @@ p.sub-title-section {
   position: absolute;
   top: 10px;
   right: 10px;
+}
+#section-soon-available #container-cards .card input.input-heart {
+  background-image: url("../img/picto/heart-rounded.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  width: 30px; /* Ajustez la largeur selon vos besoins */
+  height: 30px; /* Ajustez la hauteur selon vos besoins */
+}
+#section-soon-available #container-cards .card input.input-heart:hover {
+  background-image: url("../img/picto/heart-rounded-full-blue.svg");
 }
 #section-soon-available #container-cards img.pict-card-book {
   position: absolute;
