--- a/css/style-catalogue.scss
+++ b/css/style-catalogue.scss
@@ -207,8 +207,6 @@ main {
           background-color: $white;
         }
 
-        
-
         img {
           position: absolute;
           top: 10%;
@@ -270,6 +268,32 @@ main {
               color: $footer;
             }
           }
+        }
+
+        input.heart-wishlist {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+        }
+  
+        input.input-heart {
+          background-image: url('../img/picto/heart-rounded.svg');
+          background-size: cover;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-color: transparent;
+          border: none;
+          cursor: pointer;
+          width: 30px; /* Ajustez la largeur selon vos besoins */
+          height: 30px; /* Ajustez la hauteur selon vos besoins */
+  
+          &:hover {
+            background-image: url('../img/picto/heart-rounded-full-blue.svg');
+          }
+        }
+  
+        input.input-heart-red {
+          background-image: url('../img/picto/heart-rounded-full-red.svg');
         }
       }
     }
