--- a/css/style.scss
+++ b/css/style.scss
@@ -31,7 +31,7 @@ $bgModal: rgba(6, 13, 30, 0.5);
 body {
   font-family: "Hind Madurai", sans-serif;
   background-color: #fafafb;
-  overflow-x: hidden;
+  width: 100vw;
 
   div.bloc-modale {
     position: fixed;
@@ -219,7 +219,7 @@ p.sub-title-section {
       position: relative;
       width: 100%;
       height: 72px;
-      padding: 10px;
+      padding: 10px 27px 10px 10px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -250,23 +250,26 @@ p.sub-title-section {
       }
 
       #container-group-search-nav-top {
-        position: absolute;
-        top: 36px;
-        left: 720px;
-        transform: translate(-50%, -50%);
+        position: relative;
 
         #input-search-nav-top {
           display: none;
 
+          &::placeholder {
+            color: $white;
+          }
+
           @media screen and (min-width: 950px) {
             display: block;
             position: relative;
-            font-size: 16px;
-            width: 300px;
+            font-size: 18px;
+            width: 400px;
             height: 45px;
-            border-radius: 8px;
             padding-left: 30px;
             border: none;
+            border-bottom: 1px solid $white;
+            background-color: transparent;
+            color: $white;
 
             &:focus {
               outline: none;
@@ -359,9 +362,7 @@ p.sub-title-section {
         div#container-box-index-logout {
           a#btn-index-session {
             img {
-              position: absolute;
-              top: -24px;
-              left: -200px;
+              line-height: 72px;
             }
           }
 
@@ -440,13 +441,9 @@ p.sub-title-section {
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   background: #0868ae;
+  padding: 120px 50px 0 50px;
 
   #container-section-news {
-    position: absolute;
-    top: 450px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -456,88 +453,70 @@ p.sub-title-section {
     }
 
     #item-section-news-left {
+      position: relative;
       h1 {
         white-space: nowrap;
         color: #f9b017;
-        font-size: 70px;
+        font-size: 40px;
         z-index: 1;
 
+        @media screen and (min-width: 650px) {
+          font-size: 55px;
+          line-height: 65px;
+          margin-bottom: 0px;
+        }
+
         @media screen and (min-width: 950px) {
+          font-size: 40px;
           margin-top: 50px;
-          margin-bottom: 100px;
+          margin-bottom: 0px;
+        }
+
+        @media screen and (min-width: 1350px) {
+          font-size: 70px;
         }
       }
 
       p#sub-title {
         padding: 15px;
-        line-height: 45px;
-        font-size: 30px;
+        line-height: 30px;
+        font-size: 20px;
         color: $white;
         z-index: 1;
+        width: 450px;
+
+        @media screen and (min-width: 650px) {
+          line-height: 35px;
+          font-size: 25px;
+          width: 600px;
+        }
 
         @media screen and (min-width: 950px) {
           margin-bottom: 50px;
+          font-size: 20px;
+          width: 500px;
+        }
+
+        @media screen and (min-width: 1350px) {
+          font-size: 30px;
+          width: 100%;
         }
       }
 
-      .wrapper {
-        position: fixed;
-        top: 90%;
-        left: 10%;
-        transform: translate(-50%, -50%);
+      a#btn-join-reader {
+        padding: 12px 24px;
+        line-height: 50px;
+        font-weight: bold;
+        text-decoration: none;
+        background: $btn-red;
+        color: $white;
+        letter-spacing: 1px;
+        border-radius: 8px;
+        transition: all 0.35s;
 
-        .link_wrapper {
-          position: relative;
-
-          a#btn-join-reader {
-            display: block;
-            width: 250px;
-            height: 50px;
-            line-height: 50px;
-            font-weight: bold;
-            text-decoration: none;
-            background: $btn-red;
-            text-align: center;
-            color: $white;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            border-radius: 8px;
-            transition: all 0.35s;
-
-            &:hover {
-              width: 250px;
-              border: 3px solid $btn-red;
-              background: transparent;
-              color: $white;
-            }
-
-            &:hover + .icon {
-              border: 3px solid $btn-red;
-              right: -25%;
-            }
-          }
-
-          div.icon {
-            width: 30px;
-            height: 30px;
-            border: 3px solid transparent;
-            position: absolute;
-            transform: rotate(45deg);
-            right: 0;
-            top: 10px;
-            z-index: -1;
-            transition: all 0.35s;
-
-            svg {
-              width: 25px;
-              position: absolute;
-              top: calc(50% - 12px);
-              left: calc(50% - 12px);
-              transform: rotate(-45deg);
-              fill: $white;
-              transition: all 0.35s;
-            }
-          }
+        &:hover {
+          background: $btn-red-hover;
+          color: $white;
         }
       }
 
@@ -643,7 +622,11 @@ p.sub-title-section {
     display: inline-block;
     margin-right: 1em;
     margin-bottom: 1em;
-    width: 200px;
+    width: 150px;
+
+    @media screen and (min-width: 1430px) {
+      width: 200px;
+    }
 
     > .front,
     > .back {
@@ -916,7 +899,7 @@ p.sub-title-section {
       }
 
       input.input-heart {
-        background-image: url('../img/picto/heart-rounded.svg');
+        background-image: url("../img/picto/heart-rounded.svg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -927,12 +910,12 @@ p.sub-title-section {
         height: 30px; /* Ajustez la hauteur selon vos besoins */
 
         &:hover {
-          background-image: url('../img/picto/heart-rounded-full-blue.svg');
+          background-image: url("../img/picto/heart-rounded-full-blue.svg");
         }
       }
 
       input.input-heart-red {
-        background-image: url('../img/picto/heart-rounded-full-red.svg');
+        background-image: url("../img/picto/heart-rounded-full-red.svg");
       }
     }
 
