--- a/css/style.scss
+++ b/css/style.scss
@@ -898,7 +898,7 @@ p.sub-title-section {
         right: 10px;
       }
 
-
+      input.input-heart {
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
